# Nmap Changelog ($Id$); -*-text-*-

o Audited the nmap-service-probes database to remove all unused
  captures, fixing dozens of bugs with captures either being ignored
  or two fields erroneously using the same capture. This was done by
  Lauri Kokkonen, David Fifield, and Rob Nicholls.

o [NSE] Added script iax2-brute and supporting IAX2 library that performs
  brute-force password guessing against the Asterisk IAX2 protocol. [Patrik]

o Added service probe for the Erlang Port Mapper Daemon. [Patrik]

o [NSE] Added script broadcast-dhcp6-discover and supporting DHCPv6 library.
  The script retrieves and prints an IPv6 address and some of the DHCP6
  options. [Patrik]

o IPv6 OS detection now includes a novelty detection phase that avoids
  printing a match when an observed fingerprint is too different from
  fingerprints seen before. As the OS database is still small, this
  will help not to make what is essentially a wild guess when seeing a
  new operating system. [David]

o [NSE] Added script dns-srv-enum that enumerates DNS service records for a
  given domain. [Patrik]

o [NSE] Added script nessus-xmlrpc-brute that performs brute force password
  guessing against the Nessus web GUI. [Patrik]

o [NSE] Added script dns-nsid by John Bond, that retrieves name server ID and
  version information.

o [NSE] Applied patch to DNS library by John Bond that adds support for the
  CHAOS class and NSID requests.

o [NSE] Changed the dnsbl library to take a threaded approach into querying
  DNSBL provides drastically improving performance. [Patrik]

o [NSE] Applied patch from Duarte Silva to dnsbl adding new services and the
  ATTACK category. [Duarte Silva]

o [NSE] Added broadcast-ripng-discover that discovers IPv6 RIPng routers and
  displays their routing information. [Patrik]

o [NSE] Made gathered CPE codes available to NSE. [Henri]

o [NSE] Fixed a memory leak in PortList::setServiceProbeResults() noticed and